adding weight inflation

--- a/exprements.ipynb
+++ b/exprements.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torchio'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchio\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtio\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m VisionDataset\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torchio'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -59,125 +71,6 @@
     "from dinov2.eval.metrics import build_segmentation_metrics, MetricAveraging, MetricType\n",
     "from dinov2.eval.segmentation.utils import LinearDecoder, setup_decoders, DINOV2Encoder\n",
     "from dinov2.utils import show_image_from_tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob\n",
-    "def data_split(data_dir=r\"C:\\Users\\Moham\\OneDrive\\Desktop\\MSDSpleen\"):\n",
-    "\n",
-    "\n",
-    "    files = glob.glob(f'{data_dir}/ImagesTr/.*')\n",
-    "\n",
-    "    for file in files:\n",
-    "        try:\n",
-    "            os.remove(file)\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error deleting {file}: {str(e)}\")\n",
-    "\n",
-    "    images_path = data_dir + \"\\ImagesTr\" \n",
-    "    labels_path = data_dir + \"\\labelsTr\"\n",
-    "    os.rename(images_path, data_dir + \"\\images\")\n",
-    "    os.rename(labels_path, data_dir + \"\\labels\")\n",
-    "\n",
-    "    images_path = data_dir + \"\\images\"\n",
-    "    labels_path = data_dir + \"\\labels\"\n",
-    "\n",
-    "    images = os.listdir(images_path)\n",
-    "    n_volumes = len(images)\n",
-    "\n",
-    "    test_list = np.arange(0, n_volumes, n_volumes/15).round().astype(\"int\")\n",
-    "    val_list = np.arange(0, n_volumes-15, (n_volumes-15)/10).round().astype(\"int\")\n",
-    "\n",
-    "    os.makedirs(data_dir + \"/test\", exist_ok=True)\n",
-    "    os.makedirs(data_dir + \"/val\", exist_ok=True)\n",
-    "\n",
-    "    to_path = data_dir + \"/test\"\n",
-    "    volumes_to_remove = []\n",
-    "    for index in test_list:\n",
-    "        shutil.move(images_path+f\"/{images[index]}\", to_path)\n",
-    "        volumes_to_remove.append(images[index])\n",
-    "    for volume in volumes_to_remove: images.remove(volume)\n",
-    "\n",
-    "    to_path = data_dir + \"/val\"\n",
-    "    volumes_to_remove = []\n",
-    "    for index in val_list:\n",
-    "        shutil.move(images_path+f\"/{images[index]}\", to_path)\n",
-    "        volumes_to_remove.append(images[index])\n",
-    "    for volume in volumes_to_remove: images.remove(volume)\n",
-    "\n",
-    "    os.rename(images_path, data_dir + \"/train\")\n",
-    "\n",
-    "def slice_it(data_dir=r\"C:\\Users\\Moham\\OneDrive\\Desktop\\MSDSpleen\\\\\"):\n",
-    "    train_data_path = data_dir + \"train/\"\n",
-    "    train_data = os.listdir(train_data_path)\n",
-    "\n",
-    "    val_data_path = data_dir + \"val/\"\n",
-    "    val_data = os.listdir(val_data_path)\n",
-    "\n",
-    "    test_data_path = data_dir + \"test/\"\n",
-    "    test_data = os.listdir(test_data_path)\n",
-    "\n",
-    "    labels_data_path = data_dir + \"labels/\"\n",
-    "    labels = os.listdir(labels_data_path)\n",
-    "\n",
-    "    files = glob.glob(f'{labels_data_path}/.*')\n",
-    "\n",
-    "    for file in files:\n",
-    "        try:\n",
-    "            os.remove(file)\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error deleting {file}: {str(e)}\")\n",
-    "\n",
-    "    labels = os.listdir(labels_data_path)\n",
-    "\n",
-    "    for scan in labels:\n",
-    "        nifit_scan = nib.load(labels_data_path + scan)\n",
-    "        array = nifit_scan.get_fdata()\n",
-    "        array = array.transpose(2, 0, 1)\n",
-    "        \n",
-    "        scan_name = scan.split(\".\")[0]\n",
-    "        for i, slice in enumerate(array):\n",
-    "            num = str(i).zfill(3)\n",
-    "            np.save(labels_data_path + os.sep + scan_name  + f\"_{num}.npy\", slice)\n",
-    "        os.remove(labels_data_path + scan)\n",
-    "\n",
-    "    for scan in train_data:\n",
-    "        nifit_scan = nib.load(train_data_path + scan)\n",
-    "        array = nifit_scan.get_fdata()\n",
-    "        array = array.transpose(2, 0, 1)\n",
-    "        \n",
-    "        scan_name = scan.split(\".\")[0]\n",
-    "        for i, slice in enumerate(array):\n",
-    "            num = str(i).zfill(3)\n",
-    "            np.save(train_data_path + os.sep + scan_name  + f\"_{num}.npy\", slice)\n",
-    "        os.remove(train_data_path + scan)\n",
-    "\n",
-    "    for scan in val_data:\n",
-    "        nifit_scan = nib.load(val_data_path + scan)\n",
-    "        array = nifit_scan.get_fdata()\n",
-    "        array = array.transpose(2, 0, 1)\n",
-    "        \n",
-    "        scan_name = scan.split(\".\")[0]\n",
-    "        for i, slice in enumerate(array):\n",
-    "            num = str(i).zfill(3)\n",
-    "            np.save(val_data_path + os.sep + scan_name  + f\"_{num}.npy\", slice)\n",
-    "        os.remove(val_data_path + scan)\n",
-    "\n",
-    "    for scan in test_data:\n",
-    "        nifit_scan = nib.load(test_data_path + scan)\n",
-    "        array = nifit_scan.get_fdata()\n",
-    "        array = array.transpose(2, 0, 1)\n",
-    "        \n",
-    "        scan_name = scan.split(\".\")[0]\n",
-    "        for i, slice in enumerate(array):\n",
-    "            num = str(i).zfill(3)\n",
-    "            np.save(test_data_path + os.sep + scan_name  + f\"_{num}.npy\", slice)\n",
-    "        os.remove(test_data_path + scan)"
    ]
   },
   {
